--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,5 +16,6 @@ claim:
 warp:
   cost-to-set: 100.0 # How much it costs to set a warp
   cost-to-use: 50.0 # How much it costs to warp
-  cooldown-seconds: 30 # Cooldown between warping (seconds)
+  pvp-cooldown: 30 # How long if a player is in pvp they wait before teleporting
+  cooldown-seconds: 120 # Cooldown between warping (seconds)
   max: 5 # Max number of warps per faction
